# paramnet

./: .gitignore  README.md  comp.py  conv1d_classifier.py  dataset.py  export_model.py  mlp_classifier.py  pyproject.toml  qual_eval.ipynb  wrongs
models/: W_Conv1D_4_16_4096_238__0.87.pth  W_Conv1D_4_16_4096_238__0.88.pth  W_Conv1D_4_16_4096_238__0.89.pth  W_Conv1D_4_16_4096_238__0.92.pth  W_Conv1D_4_16_4096_238__0.93.pth  W_MLP_512_128_32__0.86.pth  ahgtrackmodel.pt  ahgtrackmodel.pth  ahgtrackmodel2.pt  ahgtrackmodel2.pth  ahgtrackmodel3.pt  ahgtrackmodel3.pth  ahgtrackmodel4.pt  ahgtrackmodel4.pth  ahgtrackmodel5.pth  ahgtrackmodel6.pt  ahgtrackmodel6.pth  ahgtrackmodel7.pt  ahgtrackmodel7.pth  ahgtrackmodel8.pt  ahgtrackmodel8.pth  ahgtrackmodel9.pth  convmodel2.pth  convmodel3.pth  convmodel4.pth  high loss low f1.pth
paramnet/data/: scans.py  util.py
paramnet/models/: conv1d.py
paramnet/run/: train_conv.py  train_multiconv.py  util.py
