[tool.poetry]
name = "paramnet"
version = "0.1.0"
description = ""
authors = ["Rahul Menon <rmeno12@utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
torch = "^2.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pyyaml = "^6.0"
pycryptodomex = "^3.17"
python-gnupg = "^0.5.0"
rospkg = "^1.5.0"
loguru = "^0.6.0"
tqdm = "^4.65.0"
torcheval = "^0.0.6"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
